mostrar proveedor encontrado

--- a/views/pagos/buscar_proveedor.html
+++ b/views/pagos/buscar_proveedor.html
@@ -13,3 +13,17 @@
     </div>
   </div>
 </form>
+{{if proveedor:}}
+    <table class="table table-hover">
+        <caption>Resultado</caption>
+        <thead>
+            <tr>
+                <th>Nombre de proveedor</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr><td>{{=proveedor.razon_social}}</td></tr>
+
+        </tbody>
+    </table>
+{{pass}}
