--- a/views/pagos/generar_orden_pagos.html
+++ b/views/pagos/generar_orden_pagos.html
@@ -1,39 +1,41 @@
 {{extend 'layout.html'}}
 <h1>Generar orden de pago</h1>
 <form class="form-horizontal" action="{{=URL(c="pagos", f="generar_orden_pagos")}}" method="POST">
+  {{for dato in orden_de_pago:}}
   <div class="form-group ">
     <label for="num_orden_pago" class="col-sm-2 control-label">Numero de orden de pago</label>
     <div class="col-sm-2">
-      <input type="input" class="form-control" id="num_orden_pago" name="num_orden_pago" placeholder="" value="{{=num_orden_pago}}" readonly="readonly">
+      <input type="input" class="form-control" id="num_orden_pago" name="num_orden_pago" placeholder="" value="{{=dato["num_orden_pago"]}}" readonly="readonly">
     </div>
   </div>
     <div class="form-group ">
     <label for="fecha" class="col-sm-2 control-label">Fecha</label>
     <div class="col-sm-2">
-      <input type="date" class="form-control" id="fecha" name="fecha" placeholder="">
+      <input type="input" class="form-control" id="fecha" name="fecha" placeholder="" value="{{=dato["fecha"]}}" readonly="readonly">
     </div>
   </div>
     <div class="form-group ">
     <label for="fecha" class="col-sm-2 control-label">Importe</label>
     <div class="col-sm-2">
-      <input type="input" class="form-control" id="importe" name="importe" placeholder="" value="{{=int(detalle_compra.precio) * int(detalle_compra.cantidad)}}" readonly="readonly">
+      <input type="input" class="form-control" id="importe" name="importe" placeholder="" value="{{=dato["importe"]}}" readonly="readonly">
     </div>
   </div>
     <div class="form-group ">
     <label for="fecha" class="col-sm-2 control-label">ID de Compra</label>
     <div class="col-sm-2">
-      <input type="input" class="form-control" id="id_compras" name="id_compras" placeholder="" value="{{=factura_compra.id_compra}}" readonly="readonly">
+      <input type="input" class="form-control" id="id_compras" name="id_compras" placeholder="" value="{{=dato["numero_de_factura"]}}" readonly="readonly">
     </div>
   </div>
     <div class="form-group ">
     <label for="fecha" class="col-sm-2 control-label">Nombre de Proveedor</label>
     <div class="col-sm-2">
-      <input type="input" class="form-control" id="id_proveedor" name="id_proveedor" placeholder="" value="{{=factura_compra.id_proveedor.razon_social}}" readonly="readonly">
+      <input type="input" class="form-control" id="id_proveedor" name="id_proveedor" placeholder="" value="{{=dato["proveedor"]}}" readonly="readonly">
     </div>
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <input type="submit" class="btn btn-default" value="Guardar" name="reporte_nombre">
+      <input type="submit" class="btn btn-default" value="Guardar" name="orden_pago">
     </div>
   </div>
+  {{pass}}
 </form>
