--- a/views/pagos/alta_cheques.html
+++ b/views/pagos/alta_cheques.html
@@ -1,5 +1,45 @@
 {{extend 'layout.html'}}
-<h1>{{=grilla}}</h1>
+<h1>Alta Cheque</h1>
 <form class="form-horizontal" action="{{=URL(c="pagos", f="alta_cheques")}}" method="POST">
-  {{=form}}
+  {{for dato in alta_cheques:}}
+  <div class="form-group ">
+    <label for="num_cheque" class="col-sm-2 control-label">Numero de Cheque</label>
+    <div class="col-sm-2">
+      <input type="input" class="form-control" id="num_cheque" name="num_cheque" placeholder="" value="{{=dato["num_cheque"]}}" readonly="readonly">
+    </div>
+  </div>
+  <div class="form-group ">
+    <label for="emision" class="col-sm-2 control-label">Emision</label>
+    <div class="col-sm-2">
+      <input type="input" class="form-control" id="emision" name="emision" placeholder="" value="{{=dato["emision"]}}" readonly="readonly">
+    </div>
+  </div>
+    <div class="form-group ">
+    <label for="vencimiento" class="col-sm-2 control-label">Vencimiento</label>
+    <div class="col-sm-2">
+      <input type="date" class="form-control" id="vencimiento" name="vencimiento" placeholder="">
+    </div>
+  </div>
+    <div class="form-group ">
+    <label for="importe" class="col-sm-2 control-label">Importe</label>
+    <div class="col-sm-2">
+      <input type="input" class="form-control" id="importe" name="importe" placeholder="" value="{{=dato["importe"]}}" readonly="readonly">
+    </div>
+  </div>
+    <div class="form-group ">
+    <label for="importe" class="col-sm-2 control-label">Nombre de cuenta Bancaria</label>
+    <div class="col-sm-2">
+      <select class="form-control">
+          {{for cuenta in cta_bancaria:}}
+          <option value="{{=cuenta.id_cuenta_bancaria}}">{{=cuenta.numero_cuenta}}/{{=cuenta.id_banco.nombre_banco}}</option>
+          {{pass}}
+      </select>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <input type="submit" class="btn btn-default" value="Siguiente" name="siguiente">
+    </div>
+  </div>
+  {{pass}}
 </form>
