--- a/views/pagos/generar_orden_pagos.html
+++ b/views/pagos/generar_orden_pagos.html
@@ -34,7 +34,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <input type="submit" class="btn btn-default" value="Ingresar Cheque" name="orden_pago">
+      <input type="submit" class="btn btn-default" value="Ingresar Cheque" name="ingresar_cheque">
     </div>
   </div>
   {{pass}}
