--- a/views/pagos/alta_cheques.html
+++ b/views/pagos/alta_cheques.html
@@ -27,9 +27,9 @@
     </div>
   </div>
     <div class="form-group ">
-    <label for="importe" class="col-sm-2 control-label">Nombre de cuenta Bancaria</label>
+    <label for="cuenta_bancaria" class="col-sm-2 control-label">Numero de cuenta Bancaria</label>
     <div class="col-sm-2">
-      <select class="form-control">
+      <select class="form-control" name="cuenta_bancaria" id="cuenta_bancaria">
           {{for cuenta in cta_bancaria:}}
           <option value="{{=cuenta.id_cuenta_bancaria}}">{{=cuenta.numero_cuenta}}/{{=cuenta.id_banco.nombre_banco}}</option>
           {{pass}}
