--- a/views/compra/detalle_compras.html
+++ b/views/compra/detalle_compras.html
@@ -1,16 +1,23 @@
 {{extend 'layout.html'}}
 <h1>Detalle de Compras</h1>
 <div class="form-group">
-    <h4>
-        <caption>
-            N° Factura: {{ =numero_factura}}  /  
-            Fecha: {{ =fecha_factura}}  /  
-            Proveedor: {{ =registro_proveedor.razon_social}}  /  
-            CUIT: {{ =registro_proveedor.cuit}}  /  
-            Tipo Factura: {{ =session.tipo_factura}}  /  
-            Forma Pago: {{ =session.forma_pago}}
-        </caption>
-    </h4>
+    
+	<thead>
+		<div class="form-group">
+        	<div class="col-sm-12">
+                  <table class="table table-hover">
+                <tr>
+		    <th> N° Factura: {{ =numero_factura}} </th>  
+		    <th>Fecha: {{ =fecha_factura}}  </th>
+		    <th>Proveedor: {{ =registro_proveedor.razon_social}}  </th>  
+		    <th>CUIT: {{ =registro_proveedor.cuit}} </th>  
+		    <th>Tipo Factura: {{ =session.tipo_factura}}  </th>  
+		    <th>Forma Pago: {{ =session.forma_pago}}</th>
+		</tr>
+		</table>
+	 </thead>	
+	
+        
 </div>
 <div class="row">
     <div class="col-sm-4">
