--- a/views/pagos/generar_orden_pagos.html
+++ b/views/pagos/generar_orden_pagos.html
@@ -8,7 +8,7 @@
   <div class="form-group ">
     <label for="num_orden_pago" class="col-sm-2 control-label">Numero de orden de pago</label>
     <div class="col-sm-2">
-      <input type="input" class="form-control" id="num_orden_pago" name="num_orden_pago" placeholder="" value="{{=dato["num_orden_pago"]}}" readonly="readonly">
+      <input type="input" class="form-control" id="num_orden_pago" name="num_orden_pago" placeholder="" value="000{{=dato["num_orden_pago"]}}" readonly="readonly">
     </div>
   </div>
     <div class="form-group ">
