--- a/views/pagos/alta_cheques.html
+++ b/views/pagos/alta_cheques.html
@@ -38,7 +38,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <input type="submit" class="btn btn-default" value="Siguiente" name="siguiente">
+      <input type="submit" class="btn btn-default" value="Confirmar" name="siguiente">
     </div>
   </div>
   {{pass}}
