--- a/views/compra/informe_subdiarioa.html
+++ b/views/compra/informe_subdiarioa.html
@@ -1,5 +1,5 @@
 {{extend 'layout.html'}}
-<h1>Reporte</h1>
+<h1>Reporte Subdiario</h1>
 {{=form.custom.begin}}
     <div class="row">
         <div class="col-sm-10">
