--- a/views/compra/informe_subdiariob.html
+++ b/views/compra/informe_subdiariob.html
@@ -1,4 +1,4 @@
-{{extend 'layout.html'}}
+<!--{{extend 'layout.html'}}
 <br><br>
 <h1>Informe Subdiario</h1>
 
@@ -64,4 +64,4 @@
     </div>
     </div>
        </tbody>
-</table>
+</table>-->
