--- a/views/compra/listado_proveedor.html
+++ b/views/compra/listado_proveedor.html
@@ -6,11 +6,11 @@
 <form method="POST" action="{{=URL(c="compra", f="listado_proveedor")}}" name=" " autocomplete="on">
 <div class="row">
     <div class="col-sm-4">
-        <input type="text" class="form-control" name="razon_social" placeholder="razon social">
+        <input type="text" class="form-control" name="razon_social" placeholder="razón social">
     </div>
-        <div class="col-sm-2">
+        <div class="col-sm-4">
             <select name="condicion_iva" class="form-control">
-                <option value>Seleccionar...</option>
+                <option value>--Seleccionar Condición IVA--</option>
                 <option value="Responsable Inscripto">Responsable Incripto</option>
                 <option value="Monotributista">Monotributista</option>
             </select>
@@ -47,12 +47,12 @@
             <th>Domicilio</th>
             <th>Localidad</th>
             <th>C.P.</th>
-            <th>Prov.</th>
-            <th>Pais</th>
-            <th>N°Tel</th>
-            <th>N°Cel</th>
-            <th>Email</th>
-            <th>Web</th>
+            <th>Provincia.</th>
+            <th>País</th>
+            <th>N°Teléfono</th>
+            <th>N°Celular</th>
+            <th>e-mail</th>
+            <th>Pag. Web</th>
         </tr>
     </thead>
     <tbody>
