--- a/views/sueldos/reportes_empleados.html
+++ b/views/sueldos/reportes_empleados.html
@@ -7,7 +7,7 @@
     </thead> 
         <tbody> 
             {{for i, reg_empleado in enumerate(lista_empleados):}}
-            <tr> <th scope="row">{{=i}}</th> <td>{{=reg_empleado.num_legajo}}</td> <td>{{=reg_empleado.nombre}} {{=reg_empleado.apellido}}</td> <td>{{=reg_empleado.fecha_ingreso}}</td> </tr>  
+            <tr> <th scope="row">{{=i+1}}</th> <td>{{=reg_empleado.num_legajo}}</td> <td>{{=reg_empleado.nombre}} {{=reg_empleado.apellido}}</td> <td>{{=reg_empleado.fecha_ingreso}}</td> </tr>  
             {{pass}}
        </tbody> 
 </table>
