--- a/views/sueldos/reportes_familiares.html
+++ b/views/sueldos/reportes_familiares.html
@@ -6,7 +6,7 @@
         <tr> <th>#</th> <th>Nro Legajo Titular</th> <th>Nombre y Apellido</th> <th>Estudia</th> <th>Edad</th> <th>Domicilio</th></tr> 
     </thead> 
         <tbody> {{for i, reg_familiar in enumerate(lista_familiares):}}
-            <tr> <th scope="row">{{=i}}</th> <td>{{=reg_familiar.familiares.num_legajo}}</td> <td>{{=reg_familiar.familiares.nombre}} {{=reg_familiar.familiares.apellido}}</td> <td>{{=reg_familiar.familiares.estudia}}</td> <td>{{=reg_familiar.familiares.edad}}</td> <td>{{=reg_familiar.familiares.domicilio_calle}} {{=reg_familiar.familiares.domicilio_numero}}</td>
+            <tr> <th scope="row">{{=i+1}}</th> <td>{{=reg_familiar.familiares.num_legajo}}</td> <td>{{=reg_familiar.familiares.nombre}} {{=reg_familiar.familiares.apellido}}</td> <td>{{=reg_familiar.familiares.estudia}}</td> <td>{{=reg_familiar.familiares.edad}}</td> <td>{{=reg_familiar.familiares.domicilio_calle}} {{=reg_familiar.familiares.domicilio_numero}}</td>
                 {{pass}}
        </tbody> 
 </table>
