--- a/views/sueldos/familiar.html
+++ b/views/sueldos/familiar.html
@@ -1,9 +1,6 @@
 {{extend 'layout.html'}}
 <h1>Registrar Familiar</h1>
 <form class="form-horizontal" action="{{=URL(c="sueldos", f="familiar2")}}" enctype="multipart/form-data" method="POST">
-
-    
-
 <form class="form-horizontal">
 
           <div class="form-group">
@@ -13,14 +10,16 @@
             </div>
           </div>
      <div class="form-group">
-            <label for="campo_fenac1" class="col-sm-2 control-label">Nombre y Apellido</label>
+            <label for="campo_nombre" class="col-sm-2 control-label">Nombres</label>
             <div class="col-sm-3">
-                <input type="text" class="form-control" id="campo_fenac1" placeholder="jose ortiz">
+                <input type="text" class="form-control" id="campo_nombre" placeholder="José Osvaldo">
             </div>
-           
+           <label for="campo_apellido" class="col-sm-2 control-label">Apellidos</label>
+            <div class="col-sm-2">
+                <input type="text" class="form-control" id="campo_apellido" placeholder="Ortiz">
+            </div>
      </div>
-
-              <div class="form-group">
+     <div class="form-group">
             <label for="campo_cuil" class="col-sm-2 control-label">Cuil</label>
             <div class="col-sm-2">
                 <input type="string" class="form-control" id="campo_cuil" placeholder="20235554442">
@@ -29,7 +28,7 @@
             <div class="col-sm-2">
                 <input type="string" class="form-control" id="campo_dni" placeholder="23555444">
             </div>
-           <label for="campo_cextra" class="col-sm-2 control-label">Parentezco</label>
+           <label for="campo_paretezco" class="col-sm-2 control-label">Parentezco</label>
             <div class="col-sm-2">
                 <select class="form-control">
                           <option>Hijo</option>
@@ -56,7 +55,6 @@
                           <option>Soltero</option>
                           <option>Viudo</option>
                </select>
-                
             </div>
             <label for="campo_lugnac" class="col-sm-2 control-label">Edad </label>
             <div class="col-sm-3">
