--- a/views/sueldos/familiares.html
+++ b/views/sueldos/familiares.html
@@ -1,20 +1,22 @@
 {{extend 'layout.html'}}
 <h1>Registrar Familiar</h1>
-
-
-
-          <div class="form-group">
+        <div class="form-group">
             <label for="campo_nrolegajo" class="col-sm-2 control-label">Nro Legajo</label>
             <div class="col-sm-1">
                 <input type="integer" class="form-control" id="campo_nrolegajo" placeholder="0001">
             </div>
           </div>
      <div class="form-group">
-            <label for="campo_fenac1" class="col-sm-2 control-label">Nombre y Apellido</label>
+            <label for="campo_fenac1" class="col-sm-2 control-label">Nombres</label>
             <div class="col-sm-3">
-                <input type="text" class="form-control" id="campo_fenac1" placeholder="jose ortiz">
+                <input type="text" class="form-control" id="campo_nombre" placeholder="José">
             </div>
-           
+       </div>
+           <div class="form-group">
+            <label for="campo_fenac1" class="col-sm-2 control-label">Apellidos</label>
+            <div class="col-sm-3">
+                <input type="text" class="form-control" id="campo_apellido" placeholder="Ortiz">
+            </div>
      </div>
 
               <div class="form-group">
@@ -38,7 +40,7 @@
      <div class="form-group">
             <label for="campo_fenac1" class="col-sm-2 control-label">Fecha Nacimiento</label>
             <div class="col-sm-3">
-                <input type="date" class="form-control" id="campo_fenac1" placeholder="01/01/1980">
+                <input type="date" class="form-control" id="campo_fenac1" placeholder="01/01/1981">
             </div>
             <label for="campo_lugnac" class="col-sm-2 control-label">Lugar </label>
             <div class="col-sm-3">
@@ -53,7 +55,6 @@
                           <option>Soltero</option>
                           <option>Viudo</option>
                </select>
-                
             </div>
             <label for="campo_lugnac" class="col-sm-2 control-label">Edad </label>
             <div class="col-sm-3">
