--- a/views/compra/informe_subdiarioa.html
+++ b/views/compra/informe_subdiarioa.html
@@ -2,36 +2,38 @@
 <h1>Reporte Subdiario</h1>
 {{=form.custom.begin}}
     <div class="row">
-        <div class="col-sm-10">
 
-    <div class="row">
-            <label class="control-label col-sm-1">Desde </label>
-            <div class="col-sm-2">
+        <label class="control-label col-sm-1">Desde </label>
+        <div class="col-sm-2">
                     {{=form.custom.widget.desde}}
-            </div>
+        </div>
+        
         <label class="control-label col-sm-1">Hasta </label>
         <div class="col-sm-2">
-                    
                     {{=form.custom.widget.hasta}}
-            </div>
+        </div>
+        
         <label class="control-label col-sm-1">Proveedor </label>
         <div class="col-sm-2">
-                    
                     {{=form.custom.widget.proveedor}}
-            </div>
-        <label class="control-label col-sm-1">Condición </label>
-        <div class="col-sm-2">
-                    
-                    {{=form.custom.widget.condicion_iva}}
-            </div>   
-        
-    </div>
+        </div>
             
-            </div>
+        <label class="control-label col-sm-1">Condición Iva </label>
         <div class="col-sm-2">
-             <input type="submit" class="btn btn-default" value="siguiente">
-            </div>
-</div>    
+                    {{=form.custom.widget.condicion_iva}}
+         <br>
+        </div>
+        <div class="col-sm-2">
+            <label class="control-label col-sm-1">Ordenar Alfabéticamente </label>
+        </div>
+        <div class="col-sm-2">
+                    {{=form.custom.widget.ordenar_alfabeticamente}}
+        </div>
+        
+        <div class="col-sm-2">
+             <input type="submit" class="btn btn-default">
+        </div>
+    </div>    
 {{=form.custom.end}}
 <br><br>
 {{if table :}}
@@ -46,4 +48,3 @@
 {{pass}}
 
 <input type="button" name="imprimir" value="Imprimir listado" onclick="window.print();">
-
