--- a/views/compra/listado_proveedor.html
+++ b/views/compra/listado_proveedor.html
@@ -12,7 +12,89 @@
             <select name="condicion_iva" class="form-control">
                 <option value>--Seleccionar Condición IVA--</option>
                 <option value="Responsable Inscripto">Responsable Incripto</option>
+                <option value="Monotributista">Monotrib{{extend 'layout.html'}}
+<br>
+<br>
+<h1>Listado de Proveedores</h1>
+
+<form method="POST" action="{{=URL(c='compra', f='listado_proveedor')}}" name=" " autocomplete="on">
+<div class="row">
+    <div class="col-sm-4">
+        <input type="text" class="form-control" name="razon_social" placeholder="razón social">
+    </div>
+        <div class="col-sm-4">
+            <select name="condicion_iva" class="form-control">
+                <option value>--Seleccionar Condición IVA--</option>
+                <option value="Responsable Inscripto">Responsable Incripto</option>
                 <option value="Monotributista">Monotributista</option>
+            </select>
+        </div>
+    <div class="col-sm-2">
+        <input type="submit" name="boton" value="buscar" class="btn btn-primary">
+    </div>
+</div>
+<br><br><br>
+
+
+<table class="table table-hover ">
+
+    <thead>
+         <style>
+            th {
+                    color: blak;
+                    font-size: 10pt;
+                    margin-top:12px;
+            }
+            td {
+                    color: blak;
+                    font-size: 8pt;
+                    margin-top:12px;
+            }
+        </style>
+        <tr>
+	    <th>#</th>	
+            <th>ID Proveedor</th>
+            <th>Cuit</th>
+            <th>Razón Social</th>
+            <th>Ingresos Brutos</th>
+            <th>Cond. IVA</th>
+            <th>Domicilio</th>
+            <th>Localidad</th>
+            <th>C.P.</th>
+            <th>Provincia.</th>
+            <th>País</th>
+            <th>N°Teléfono</th>
+            <th>N°Celular</th>
+            <th>e-mail</th>
+            <th>Pag. Web</th>
+        </tr>
+    </thead>
+    <tbody>
+	{{for i, reg_proveedor in enumerate (proveedores):}}
+        <tr>
+            <th scope="row">{{=i}}</th>
+                <td>{{=reg_proveedor["id_proveedor"]}}</td>
+                <td>{{=reg_proveedor["cuit"]}}</td>
+                <td>{{=reg_proveedor["razon_social"]}}</td>
+                <td>{{=reg_proveedor["ingreso_bruto"]}}</td>
+                <td>{{=reg_proveedor["condicion_iva"]}}</td>
+                <td>{{=reg_proveedor["domicilio"]}}</td>
+                <td>{{=reg_proveedor["localidad"]}}</td>
+                <td>{{=reg_proveedor["codigo_postal"]}}</td>
+                <td>{{=reg_proveedor["provincia"]}}</td>
+                <td>{{=reg_proveedor["pais"]}}</td>
+                <td>{{=reg_proveedor["telefono"]}}</td>
+                <td>{{=reg_proveedor["celular"]}}</td>
+                <td>{{=reg_proveedor["email_proveedor"]}}</td>
+                <td>{{=reg_proveedor["pagina_web"]}}</td>
+        </tr>
+	{{pass}}
+    </tbody>
+
+</table>
+<input type="button" name="imprimir" value="Imprimir listado" onclick="window.print();">
+</form>
+utista</option>
             </select>
         </div>
     <div class="col-sm-2">
