--- a/views/sueldos/reportes_familiares2.html
+++ b/views/sueldos/reportes_familiares2.html
@@ -2,8 +2,8 @@
 <h1>Criterios de busqueda</h1>
     <caption>Seleccionar Reporte
     </caption>
-<form class="form-horizontal" action="{{=URL(c="sueldos", f="reportes_familiares")}}" enctype="multipart/form-data" method="POST">
-  <div class="form-group">
+<form class="form-horizontal" autocomplete="off" action="{{=URL(c="sueldos", f="reportes_familiares")}}" enctype="multipart/form-data" method="POST">
+<div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <div class="checkbox">
         <label>
